--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -112,6 +112,22 @@
             "options": {
                 "cwd": "${workspaceFolder}"
             }
+        },
+        {
+            "label": "Запустить юнит-тесты",
+            "type": "shell",
+            "command": "rake unit",
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "new",
+                "showReuseMessage": false
+            },
+            "problemMatcher": [],
+            "options": {
+                "cwd": "${workspaceFolder}"
+            }
         }
     ]
 }
